fix: [FFM-1676]: Adding fix for flag description causing overflow (#6164)

--- a/src/modules/75-cf/pages/feature-flags-detail/FeatureFlagsDetailPage.module.scss
+++ b/src/modules/75-cf/pages/feature-flags-detail/FeatureFlagsDetailPage.module.scss
@@ -4,10 +4,6 @@
   height: 100%;
   background: #f9f9fd !important;
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-.flag-details-top-section {
   display: flex;
-  height: 100%;
   gap: var(--spacing-large);
 }
